--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"express-handlebars": "^5.1.0",
 		"express-session": "^1.17.1",
 		"jsonwebtoken": "^8.5.1",
+		"moment": "^2.29.4",
 		"mysql2": "^2.1.0",
 		"nodemailer": "^6.7.5",
 		"onesignal-node": "^3.4.0",
